--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 *.i*86
 *.x86_64
 *.hex
+./cub3D
 
 # Debug files
 *.dSYM/
@@ -50,4 +51,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-./cub3D
+
+# rajouter 
+doc/
